--- a/README
+++ b/README
@@ -5,7 +5,7 @@ machine and virtual network as a library
 
 GETTING STARTED
 
-BSD Make and Clang are required to build and install libable
+libable only requires BSD Make and Clang to build and install
 
 Building and installing on OpenBSD
 
